test/testBool/badDiv3.out
badDiv3.rask:3:15: error: function binary/(int32, boolean) not found
