test/testBool/badDiv3.rask
main() -> void
{
    var x = 7 / false;
}